--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <div class="container">
     <div class="card">
        
-        <img src="img2.png" alt="">
+        <!-- <img src="img2.png" alt=""> -->
+        <div class="img">
+
+        </div>
         <p> <strong>Improve your front-end skills by building projects</strong> </p>
         <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
